test/invalid/bad-xml.mjml
<!-- Error: malformed XML syntax -->
<mjml>
  <mj-body>
    <<<this is not valid XML>>>
  </mj-body>
</mjml>
